[project]
name = "biolink-mcp"
version = "0.1.0"
description = "MCP for Monarch Biolink API"
readme = "README.md"
authors = [
    { name = "Cascade", email = "cascade@windsurf.ai" }
]
requires-python = ">=3.10"
dependencies = [
    "biolink-api-client",
    "eliot>=1.17.5",
    "pycomfort>=0.0.18",
    "fastmcp>=2.9.1",
    "typer>=0.16.0",
]

[project.scripts]
biolink-mcp = "biolink_mcp.server:cli_app_stdio"
biolink-mcp-stdio = "biolink_mcp.server:cli_app_stdio"
biolink-mcp-sse = "biolink_mcp.server:cli_app_sse"
biolink-mcp-run = "biolink_mcp.server:cli_app_run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/biolink_mcp"]

[tool.hatch.build]
exclude = [
    "*.log",
    "logs/",
    "images/",
    ".venv/",
    ".pytest_cache/",
    "test/",
    # Exclude development/temporary databases but keep the main data
    "*.db",
    "temp*.sqlite*",
    "test*.sqlite*",
    "debug*.sqlite*",
    # Exclude data directory since we now load from Hugging Face
    "data/"
]

[dependency-groups]
dev = [
    "just-agents-core>=0.8.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.12.1"
]
