[project]
name = "biolink-mcp"
version = "0.1.0"
description = "MCP for Monarch Biolink API"
readme = "README.md"

requires-python = ">=3.10"
dependencies = [
    "pycomfort>=0.0.18",
    "fastmcp>=2.10.2",
    "typer[all]>=0.9.0",
    "pydantic",
    "eliot",
    "aiohttp"
]

[project.scripts]
biolink-mcp = "biolink_mcp.server:cli_app_stdio"
server = "biolink_mcp.server:cli_app"
stdio = "biolink_mcp.server:cli_app_stdio"
sse = "biolink_mcp.server:cli_app_sse"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
    "*.log",
    "logs/"
]

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
]
